--- a/.github/workflows/llvmlite_osx-arm64_wheel_builder.yml
+++ b/.github/workflows/llvmlite_osx-arm64_wheel_builder.yml
@@ -67,30 +67,16 @@ jobs:
           fi
           conda install -c "$CHAN" llvmdev=${{ env.FALLBACK_LLVMDEV_VERSION }} cmake libxml2 python-build
 
-      # Optional: Keep this step to always list available Xcodes
-      - name: List Available Xcode Versions
-        run: ls /Applications | grep Xcode
-
-      # Add step to select the desired older Xcode
-      - name: Select Older Xcode (Xcode 15.0)
+      - name: Setup platform-specific requirements
         run: |
-          XCODE_PATH="/Applications/Xcode_15.0.app" # Using oldest available from list
-          if [ -d "$XCODE_PATH" ]; then
-            echo "Selecting Xcode at $XCODE_PATH"
-            sudo xcode-select -s "$XCODE_PATH"
-          else
-            echo "Error: Xcode path $XCODE_PATH not found!"
-            exit 1
-          fi
-
-      # Add step to verify SDKs in the selected Xcode
-      - name: List SDKs in Selected Xcode
-        run: ls -l "$(xcode-select -p)/Platforms/MacOSX.platform/Developer/SDKs"
+          source ./buildscripts/github/setup_platform.sh "osx-arm64"
 
       - name: Build wheel
         env:
-          MACOSX_DEPLOYMENT_TARGET: "13.0"
-        run: arch -arm64 python -m build
+          MACOSX_DEPLOYMENT_TARGET: "10.10"
+          SDKROOT: "/opt/MacOSX10.10.sdk"
+        run: |
+          arch -arm64 python -m build
 
       - name: Upload wheel
         uses: actions/upload-artifact@v4
