--- a/.github/workflows/llvmlite_osx-arm64_wheel_builder.yml
+++ b/.github/workflows/llvmlite_osx-arm64_wheel_builder.yml
@@ -74,6 +74,7 @@ jobs:
       - name: Build wheel
         env:
           MACOSX_DEPLOYMENT_TARGET: "11.1"
+          SDKROOT: "/opt/MacOSX11.1.sdk"
         run: |
           arch -arm64 python -m build --verbose
 
