--- a/.github/workflows/llvmlite_osx-arm64_wheel_builder.yml
+++ b/.github/workflows/llvmlite_osx-arm64_wheel_builder.yml
@@ -73,6 +73,43 @@ jobs:
         run: |
           arch -arm64 python -m build --verbose
 
+      - name: Fix macOS wheel library paths
+        run: |
+            cd dist
+            whl=$(stat -f "%m %N" ./*.whl | sort -n | tail -n 1 | cut -d' ' -f2-)
+            echo "Processing wheel: $whl"
+
+            # Unpack the wheel
+            wheel unpack "$whl"
+
+            # Get into the unpacked directory
+            target_dir=$(echo "$whl" | cut -d "-" -f1 -f2)
+            cd "$target_dir"
+
+            # Find the dylib
+            target=$(find . -iname "libllvmlite.dylib")
+            echo "Found dylib at: $target"
+
+            echo "=== BEFORE ==="
+            otool -L "$target"
+
+            # Fix all @rpath libraries
+            install_name_tool -change "@rpath/libz.1.dylib" "/usr/lib/libz.1.dylib" "$target"
+            install_name_tool -change "@rpath/libc++.1.dylib" "/usr/lib/libc++.1.dylib" "$target"
+            install_name_tool -change "@rpath/libunwind.1.dylib" "/usr/lib/libunwind.1.dylib" "$target"
+
+            echo "=== AFTER ==="
+            otool -L "$target"
+
+            echo "=== $target_dir contents ==="
+            find . -ls
+            echo "=== Write back to wheel ==="
+            cd ..
+            wheel pack "$target_dir"
+
+            echo "=== Final wheel filename ==="
+            ls -la ./*.whl # List wheel in dist dir
+
       - name: Upload wheel
         uses: actions/upload-artifact@v4
         with:
