--- a/conda-recipes/llvmlite/conda_build_config.yaml
+++ b/conda-recipes/llvmlite/conda_build_config.yaml
@@ -1,10 +1,10 @@
 # Numba/llvmlite stack needs an older compiler for backwards compatability.
-c_compiler_version:
+c_compiler_version:         # [linux or osx]
   - 7                       # [linux and (x86_64 or ppc64le)]
   - 11                      # [linux and aarch64]
   - 14                      # [osx]
 
-cxx_compiler_version:
+cxx_compiler_version:       # [linux or osx]
   - 7                       # [linux and (x86_64 or ppc64le)]
   - 11                      # [linux and aarch64]
   - 14                      # [osx]
